--- a/simple_sample_bongsub/app/components/Application/style.sass
+++ b/simple_sample_bongsub/app/components/Application/style.sass
@@ -6,7 +6,7 @@
   font-family: "Helvetica Neue"
   display: flex
   justify-content: center
-  align-items: center
+  align-items: flex-end
   width: 100%
   height: 100%
 
