--- a/simpleSampleApp/src/App/style.sass
+++ b/simpleSampleApp/src/App/style.sass
@@ -11,7 +11,7 @@
   height: 100%
 
 :local(.wrap)
-  width: 500px
+  width: 100%
   background: rgba(white, .95)
   padding: 1em
   border-radius: .3em
