--- a/sampleApp/src/routes/todo/Todo.css
+++ b/sampleApp/src/routes/todo/Todo.css
@@ -15,12 +15,75 @@
 }
 
 .container {
-  margin: 0 auto;
-  padding: 0 0 40px;
-  max-width: var(--max-content-width);
+	max-width: 980px;
+	text-align: center;
+	margin: 20px auto;
 }
 
-ul{
-	list-style:none;
-	padding-left:0px;
+* {
+    padding:0;
+    margin:0;
+}
+
+/*html{*/
+/*    font:14px normal Arial, sans-serif;*/
+/*    color:#626771;*/
+/*    background-color:#fff;*/
+/*}*/
+
+/*body{*/
+/*    padding:60px;*/
+/*    text-align: center;*/
+/*}*/
+
+h1{
+    font-size:18px;
+    margin-bottom:20px;
+}
+
+.services{
+    list-style: none;
+    display: inline-block;
+    width: 340px;
+    text-align: left;
+}
+
+.services p{
+    display: block;
+    padding: 15px 20px;
+    background-color: #F8F8F8;
+    color: #7B8585;
+    margin-bottom: 3px;
+    position: relative;
+    cursor: pointer;
+    
+    transition: 0.3s;
+}
+
+.services p b{
+    position: absolute;
+    right: 28px;
+    line-height: 16px;
+    width: 100px;
+    color: #808787;
+    text-align: right;
+}
+
+.services p:hover{
+    background-color:#d8f2f1;
+}
+
+.services p.active{
+    color:#fff;
+    background-color:#41c7c2;
+}
+
+.services p.active b{
+    color: #fff;
+}
+
+.total{
+    background: none !important;
+    cursor: default !important;
+    padding-top: 10px !important;
 }
