fix the run command & change todo app to exam

--- a/sampleApp/src/routes/todo/Todo.css
+++ b/sampleApp/src/routes/todo/Todo.css
@@ -87,3 +87,9 @@ h1{
     cursor: default !important;
     padding-top: 10px !important;
 }
+
+.avg{
+    background: none !important;
+    cursor: default !important;
+    padding-top: 10px !important;
+}
